added password and encoder to show complaints